--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,54 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.blockutd.blockutd.MainActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="140dp"
-        android:layout_marginBottom="186dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="5dp"
-        android:contentDescription="@string/onOffDesc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onOffText"
-        app:srcCompat="@drawable/bemoji" />
+        <TextView
+            android:id="@+id/onOffText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/imageButton"
+            android:layout_alignAbove="@+id/imageButton"
+            android:layout_centerHorizontal="true"
+            android:text="@string/onOffText"
+            android:textSize="20dp"
+            android:textStyle="italic" />
+        <ImageButton
+            android:id="@id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:contentDescription="@string/onOffDesc"
+            app:srcCompat="@drawable/bemoji" />
 
-    <TextView
-        android:id="@+id/onOffText"
-        android:layout_width="wrap_content"
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="106dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="155dp"
-        android:text="@string/onOffText"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="10dp"
+        tools:ignore="UseCompoundDrawables">
 
-    <ImageView
-        android:id="@+id/ethereumButton"
-        android:layout_width="39dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="225dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="126dp"
-        android:contentDescription="@string/ethereumDesc"
-        android:cropToPadding="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:srcCompat="@drawable/ethereum" />
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ethereumButton"
+            android:layout_width="39dp"
+            android:layout_height="44dp"
+            android:contentDescription="@string/ethereumDesc"
+            app:srcCompat="@drawable/ethereum" />
+
+        <TextView
+            android:id="@+id/etherQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/etherMoney"
+            android:textSize="28sp" />
+
+    </LinearLayout>
+
+</RelativeLayout>
